ecmascript/parser/tests/typescript-errors/tsc/decorators/class/decoratorOnClass3/input.ts.stderr
error: Expected {, got @
 --> $DIR/tests/typescript-errors/tsc/decorators/class/decoratorOnClass3/input.ts:7:1
  |
7 | @dec
  | ^

